2018/20181002pyerror
```
原程式
#!/usr/bin/env python
#coding=utf-8

# radius = 20 # radius is now 20
# Prompt the user to enter a radius
radius = eval(input("Enter a number for radius: "))

# Compute area
area = radius * radius * 3.14159

# Display results
print("The area for the circle of radius", radius, "is", area)


語法錯誤:
顯示
File "aaa.py", line 14
    print"The area for the circle of radius", radis, "is", area)
                                           ^
SyntaxError: invalid syntax
程式碼
#!/usr/bin/env python
#coding=utf-8

# radius = 20 # radius is now 20
# Prompt the user to enter a radius
#radius = eval(input("Enter a number for radius: "))

radius =(input("Enter a number for radius: "))

# Compute area
area = radius * radius * 3.14159

# Display results
print"The area for the circle of radius", radis, "is", area)
輸入錯誤:
顯示
python3 aaa.py
Enter a number for radius: 1
Traceback (most recent call last):
  File "aaa.py", line 11, in <module>
    area = radius * radius * 3.14159
TypeError: can't multiply sequence by non-int of type 'str'
程式碼
#!/usr/bin/env python
#coding=utf-8

# radius = 20 # radius is now 20
# Prompt the user to enter a radius
#radius = eval(input("Enter a number for radius: "))

radius =(input("Enter a number for radius: "))

# Compute area
area = radius * radius * 3.14159

# Display results
print("The area for the circle of radius", radius, "is", area)
命名錯誤:
顯示
Traceback (most recent call last):
  File "aaa.py", line 13, in <module>
    print("The area for the circle of radius", radis, "is", area)
NameError: name 'radis' is not defined
程式碼
#!/usr/bin/env python
#coding=utf-8

# radius = 20 # radius is now 20
# Prompt the user to enter a radius
radius = eval(input("Enter a number for radius: "))


# Compute area
area = radius * radius * 3.14159

# Display results
print("The area for the circle of radius", radis, "is", area)
```
